# atsc405_2018

./: .gitignore  MANIFEST.in  Readme.md  cloudphys.yml  environment.yml  pyproject.toml  setup.cfg  setup.py  write_version.py
a405/data/: dropgrow.json
a405/dropgrow/: drop_grow.py
a405/skewT/: fullskew.py  makeSkew.py  skewlib.py
a405/soundings/: wyominglib.py
a405/thermo/: constants.py  thermlib.py
a405/utils/: killjobs.py
notebooks/: .gitignore  _config.yml  _toc.yml  adiabatic_box.ipynb  adiabatic_box.md  adiabatic_box_al.md  adiabatic_box_solution.ipynb  adiabatic_box_solution.md  aero_dist.ipynb  aero_dist.md  aero_dist_al.md  aero_dist_sol.ipynb  aero_dist_sol.md  aero_sol.ipynb  aero_sol.md  cape_part1.ipynb  cape_part1.md  cape_part1_al.md  cape_part1_solution.ipynb  cape_part1_solution.md  cape_part2_al.md  cape_part2_solution.ipynb  cape_part2_solution.md  cgilsI-solution.ipynb  cgilsI-solution.md  cgilsI.ipynb  cgilsI.md  cgilsI_al.md  clausius_comparison.ipynb  clausius_comparison.md  clausius_comparison_al.md  collision_coalescence_al.md  column_vapor.ipynb  column_vapor.md  constant_mixing_ratio.ipynb  constant_mixing_ratio.md  constant_mixing_ratio_al.md  constant_mixing_ratio_solution.ipynb  constant_mixing_ratio_solution.md  convec_instability.ipynb  (+93 more)
notebooks/python/: adiabatic_box.py  adiabatic_box_solution.py  aero_dist.py  aero_dist_sol.py  aero_sol.py  cape_part1.py  cape_part1_solution.py  cgilsI-solution.py  cgilsI.py  clausius_comparison.py  column_vapor.py  constant_mixing_ratio.py  (+39 more)
recipe/: meta.yaml
util_files/: CmdInit.cmd
(+2 files in other folders)
